# smeMaster

./: .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY-AUDIT.md  SECURITY.md  com.smemaster.app.desktop  com.smemaster.app.metainfo.xml  com.smemaster.app.yml  eslint.config.js  index.html  package.json  playwright.config.ts  release-please-config.json  smemaster.spec  splashscreen.html  tsconfig.json  vite.config.ts  vitest.config.ts
src-tauri/: .clippy.toml  Cargo.toml  build-android.ps1  tauri.android.conf.json  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: android.json  desktop.json
src-tauri/crates/ml-sidecar/: Cargo.toml
src-tauri/crates/ml-sidecar/src/: main.rs
src-tauri/icons/: icon.icns
src-tauri/seeds/: account.json  app_config.json  attachments.json  blacklist_monitors.json  calendar_events.json  calendars.json  campaign_recipients.json  campaigns.json  company.json  compliance_profiles.json  composer_presets.json  contact_files.json  contact_segments.json  contact_tag_pivot.json  contact_tags.json  contacts.json  deliverability_events.json  engagement_log.json  labels.json  messages.json  quick_replies.json  settings.json  signatures.json  tasks.json  template_categories.json  thread_categories.json  thread_labels.json  threads.json  workflow_rules.json
src-tauri/src/: assets.rs  auto_launch.rs  dns.rs  error.rs  errors.rs  lib.rs  platform.rs  state.rs  update_tracker.rs
src-tauri/src/ai/: indexer.rs  local_engine.rs  mod.rs  models.rs  parser.rs  rag.rs  vector_db.rs
src-tauri/src/android/: mod.rs
src-tauri/src/background/: caldav_sync.rs  mod.rs  persistence.rs
src-tauri/src/calendar/: driver.rs  mod.rs
src-tauri/src/calendar/drivers/: caldav.rs  mod.rs
src-tauri/src/commands/: account_import.rs  accounting.rs  ai.rs  calendar.rs  comms.rs  compliance.rs  contacts.rs  core.rs  crm.rs  db.rs  deals.rs  deliverability.rs  discovery.rs  idle.rs  imap.rs  invoicing.rs  logging.rs  mod.rs  onboarding_cmds.rs  pos.rs  security.rs  settings.rs  smtp.rs  sync.rs  system.rs  system_android.rs  system_desktop.rs  tasks.rs  updater_commands.rs  wallet.rs  workflows.rs
src-tauri/src/composer/: mod.rs
src-tauri/src/data_cache/: accounts.rs  cache.rs  contacts.rs  labels.rs  mod.rs  threads.rs
src-tauri/src/db/: change_tracker.rs  change_tracker.test.rs  commands.rs  common.rs  crypto.rs  error.rs  migration_rollback.rs  mod.rs
src-tauri/src/db/ai/: schema.rs
src-tauri/src/db/calendar/: operations.rs  schema.rs
src-tauri/src/db/campaigns/: operations.rs  schema.rs
src-tauri/src/db/compliance/: schema.rs
src-tauri/src/db/contacts/: operations.rs  schema.rs
src-tauri/src/db/core/: operations.rs  schema.rs
src-tauri/src/db/deliverability/: mod.rs  schema.rs
src-tauri/src/db/invoicing/: schema.rs
src-tauri/src/db/license/: mod.rs
src-tauri/src/db/mail/: operations.rs  schema.rs
src-tauri/src/db/migrations/: 001_core.sql  002_mail.sql  003_contacts.sql  004_campaigns.sql  005_ai.sql  006_security.sql  007_deliverability.sql  008_workflows.sql  009_calendar.sql  010_tasks.sql  011_compliance.sql  012_blacklist_monitoring.sql  013_oauth_tokens.sql  014_account_cleanup.sql  015_suggestions.sql  016_sync_documents.sql  017_vault_items.sql  018_offline_availability.sql  019_sync_migration.sql  020_invoicing.sql  020_pos_hardware.sql  021_contacts_unify_clients.sql  021_engagement_log_fix.sql  022_accounting.sql  023_wallet.sql  024_hardening.sql  025_workflow_execution.sql  026_automation_actions.sql  027_contacts_fix.sql  028_attachments_account_id.sql  029_campaign_scheduling.sql  030_sender_credentials.sql  031_thread_importance_score.sql  032_deals_pipeline.sql  mod.rs
src-tauri/src/db/security/: schema.rs
src-tauri/src/db/seed/: loader.rs  mod.rs
src-tauri/src/db/tables/: mod.rs  test_helpers.rs
src-tauri/src/db/tables/accounting/: mod.rs
src-tauri/src/db/tables/ai/: ai_cache.rs  ai_config.rs  mod.rs
src-tauri/src/db/tables/calendar/: calendar_events.rs  calendars.rs  mod.rs  snooze_presets.rs
src-tauri/src/db/tables/campaigns/: backup_schedules.rs  campaign_recipients.rs  campaigns.rs  mod.rs  utm_clicks.rs  (+1 more)
src-tauri/src/db/tasks/: mod.rs  operations.rs  schema.rs
src-tauri/src/db/vault/: operations.rs  schema.rs
src-tauri/src/db/workflows/: mod.rs  operations.rs  schema.rs
src-tauri/src/deliverability/: diagnostic.rs  dnsbl.rs  intelligence.rs  mod.rs  sentinel.rs  types.rs
src-tauri/src/device/: mod.rs  pairing.rs  sync_commands.rs  sync_persistence.rs  sync_types.rs
src-tauri/src/drivers/: mod.rs
src-tauri/src/events/: automation.rs  emit.rs  heartbeat.rs  mod.rs  processor.rs
src-tauri/src/export/: backup_restore.rs  data_export.rs  mbox.rs  mod.rs  pdf_report.rs  scheduler.rs  types.rs
src-tauri/src/imap/: batch.rs  connect.rs  driver.rs  fetch.rs  flags.rs  folder.rs  imap_driver.rs  mod.rs  session.rs  sync.rs  types.rs
src-tauri/src/invoicing/: calc.rs
src-tauri/src/jmap/: mod.rs
src-tauri/src/licensing/: hardware_id.rs  license.rs  mod.rs
src-tauri/src/microsoft_graph/: mod.rs
src-tauri/src/native_events/: mod.rs
src-tauri/src/notifications/: mod.rs
src-tauri/src/oauth/: mod.rs  monitor.rs
src-tauri/src/orchestrator/: gating.rs  health_monitor.rs  init.rs  mod.rs  onboarding.rs  service.rs  services.rs  state_machine.rs  subsystem_lifecycle.rs  tool_registry.rs  watchdog.rs
src-tauri/src/pairing/: mod.rs
src-tauri/src/pgp/: crypto.rs  keyring.rs  mod.rs
src-tauri/src/pos/: mod.rs
src-tauri/src/pos/drivers/: escpos.rs  mod.rs  system_printer.rs
src-tauri/src/services/: background_services.rs  lead_scoring.rs  mod.rs  offline_queue.rs  pre_cache_service.rs  queue_service.rs
src-tauri/src/services/invoicing/: mod.rs  pdf.rs  peppol.rs
src-tauri/src/smtp/: client.rs  types.rs
src-tauri/src/sync_engine/: document.rs  migration.rs  mod.rs  peer.rs  protocol.rs  storage.rs  transport.rs
src-tauri/src/vault/: mod.rs  ops.rs
(+1494 files in other folders)
