[workspace]
resolver = "2"
members = [
    "crates/ml-sidecar",
]

[package]
name = "smemaster"
version = "1.0.0" # x-release-please-version
description = "Mobile-first email, automation, and lightweight CRM for SMEs"
authors = ["SMEMaster Team"]
license = "Apache-2.0"
repository = "https://github.com/Zakarialabib/smeMaster"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
pgp = "0.19.0"
rand = "0.8"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
log = "0.4"
tauri = { version = "2.11", features = ["tray-icon"] }
tauri-plugin-log = "2.8.0"
tauri-plugin-notification = "2.3.3"
tauri-plugin-opener = "2.5.4"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-updater = { version = "2.10.1", optional = true }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "uuid", "chrono"] }
tokio = { version = "1", features = ["net", "io-util", "sync", "macros", "rt", "time", "fs"] }
futures = "0.3"
async-imap = { version = "0.11.2", default-features = false, features = ["runtime-tokio"] }
mail-parser = "0.11.3"
mailparse = "0.15.0"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "rustls-tls",  "builder"] }
base64 = "0.22"
hex = "0.4"
aes-gcm = "0.10"
chrono = { version = "=0.4.38", default-features = false, features = ["std", "clock", "serde"] }
utf7-imap = "0.3"
socket2 = "0.6.3"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls-no-provider", "json", "http2", "form"] }
trust-dns-resolver = { version = "0.23", default-features = false, features = ["tokio-runtime"] }
dirs = "6.0.0"
url = "2"
webpki-roots = "0.26"  

# TLS: rustls by default, native-tls for legacy builds
# NOTE: default-features=false to exclude aws-lc-sys (fails on NDK cross-compile)
# NOTE: native-tls will NOT link on Android NDK — use only on desktop (rustls is safe)
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
# webpki-roots is used instead of rustls-native-certs for Android TLS support
native-tls = { version = "0.2", optional = true }
tokio-native-tls = { version = "0.3", optional = true }
tauri-plugin-persisted-scope = "2.3.7"
tauri-plugin-shell = "2.2.1"
tauri-plugin-biometric = "2.3.2"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-store = "2.4.2"
tauri-plugin-global-shortcut = "2.2.1"
auto-launch = "0.6.0"
sha2 = "0.10"
argon2 = { version = "0.5", features = ["password-hash", "rand"] }
uuid = { version = "1", features = ["v4"] }
glob = "0.3"
smallvec = "1"
thiserror = "2"
sysinfo = "0.32"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
dashmap = "6.1"
automerge = "0.6"
mdns-sd = "0.11"
lopdf = "0.34"

# ── local-ai (optional ML/RAG deps) ──────────────────────────────────────
# Gated behind the "local-ai" feature so `cargo build` works without protoc.
lancedb = { version = "0.6", default-features = false, optional = true }
arrow = { version = "51", optional = true }
candle-core = { version = "0.8.1", optional = true }
candle-nn = { version = "0.8.1", optional = true }
candle-transformers = { version = "0.8.1", optional = true }
hf-hub = { version = "0.4", optional = true }
tokenizers = { version = "0.21", optional = true }
calamine = { version = "0.26", optional = true }
docx-rs = { version = "0.4", optional = true }

ring = "0.17.14"
rust_decimal = { version = "1", features = ["macros"] }

[dev-dependencies]
tempfile = "3"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_UI_Shell"] }

[features]
default = ["rustls-tls", "local-ai"]
native-tls = ["dep:native-tls", "dep:tokio-native-tls"]
rustls-tls = []
updater = ["dep:tauri-plugin-updater"]
devtools = ["tauri/devtools"]

# ── local-ai ───────────────────────────────────────────────────────────────
# Enables the on-device RAG / local LLM inference sidecar (candle + BGE-small
# embedding engine, LanceDB vector store, HF Hub model downloads, document
# parsers). ON by default so existing behaviour is preserved.
#
# Turning this feature OFF builds only the core app — no protoc required.
# AI Tauri commands remain registered, but the model-loading path becomes
# a no-op stub via `#[cfg(not(feature = "local-ai"))]` stubs in commands/ai.rs.
#
# NOTE: `lopdf` stays unconditional — it is also used by invoicing/pdf.rs.
local-ai = [
  "dep:lancedb", "dep:arrow",
  "dep:candle-core", "dep:candle-nn", "dep:candle-transformers",
  "dep:hf-hub", "dep:tokenizers", "dep:calamine", "dep:docx-rs",
]
